--- a/app/components/contactModal.templ
+++ b/app/components/contactModal.templ
@@ -7,27 +7,24 @@ templ ContactModal() {
 	<div class="modal">
 		<div id="alert-container" class="absolute z-40"></div>
 		<label class="modal-overlay" for="modal-contact"></label>
-		<div class="modal-content flex flex-col gap-5">
-			<label for="modal-contact" class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</label>
-			<h2 class="text-xl">CONTACT ME</h2>
-			<ul>
+		<div class="modal-content w-fit flex flex-col gap-10">
+			<h2 class="text-4xl text-center">CONTACT ME 📲</h2>
+			<ul class="text-xl">
 				<li class="flex items-center justify-between">
-					<b class="px-1">
-						Mobile:
-					</b>
-					<span class="px-1" id="mobile">
-						+34 664 33 06 10
+					<span class="w-full" id="mobile">
+						@LinkItem(templ.SafeURL("tel:+34664330610"), "link link-primary") {
+							+34 664 33 06 10
+						}
 					</span>
 					<button id="mobile-btn" aria-label="Copy Icon Button" class="btn btn-circle btn-sm btn-ghost p-2" onclick="copyText('mobile')">
 						@icons.CopyIcon()
 					</button>
 				</li>
 				<li class="flex items-center justify-between">
-					<b class="px-1">
-						Email:
-					</b>
-					<span class="px-1" id="mail">
-						aslan.staub@pm.me
+					<span class="w-full" id="mail">
+						@LinkItem(templ.SafeURL("mailto:aslan.staub@pm.me?subject=Contacto&body=Hi, I would like to contact you..."), "link link-primary") {
+							aslan.staub@pm.me
+						}
 					</span>
 					<button id="mail-btn" aria-label="Copy Icon Button" class="btn btn-circle btn-sm btn-ghost p-2" onclick="copyText('mail')">
 						@icons.CopyIcon()
