--- a/app/components/shareModal.templ
+++ b/app/components/shareModal.templ
@@ -15,14 +15,17 @@ templ ShareModal() {
 	<div class="modal">
 		<div id="alert-container" class="absolute z-40"></div>
 		<label class="modal-overlay" for="modal-share"></label>
-		<div class="modal-content flex flex-row gap-5">
-			for _, socialMediaShare := range constants.SocialShareButtons {
-				<span id={ socialMediaShare.Icon.Id + "ShareModal" }>
-					@LinkItem(formatSafeURL(socialMediaShare.URL), "") {
-						@IconLabel(socialMediaShare.Icon, false, 10)
-					}
-				</span>
-			}
+		<div class="modal-content flex flex-col gap-10">
+			<h2 class="text-4xl bold text-center">Share this portfolio! 😍</h2>
+			<ul class="flex flex-row gap-5 justify-center">
+				for _, socialMediaShare := range constants.SocialShareButtons {
+					<li id={ socialMediaShare.Icon.Id + "ShareModal" }>
+						@LinkItem(formatSafeURL(socialMediaShare.URL), "") {
+							@IconLabel(socialMediaShare.Icon, false, 10)
+						}
+					</li>
+				}
+			</ul>
 		</div>
 	</div>
 }
